k8s/order-service.yml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: ecommerce
spec:
  type: NodePort
  selector:
    app: order-service
  ports:
  - port: 3002
    targetPort: 3002
    nodePort: 30080
